--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '@layouts/Layout.astro';
-import Card from '@components/Card.astro';
+import Layout from '@site/Layout.astro';
+import Card from '@site/Card.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="JOUR.">
 	<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 	<p class="instructions">
 		To get started, open the directory <code>src/pages</code> in your project.<br />
