--- a/web/src/pages/sign-in.astro
+++ b/web/src/pages/sign-in.astro
@@ -2,7 +2,7 @@
 export const prerender = false;
 
 import { SignIn } from "astro-clerk-auth/components/interactive";
-import Layout from "src/ui/Layout.astro";
+import Layout from "@site/Layout.astro";
 ---
 
 <Layout title="Sign in | JOUR.">
