--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
-import Layout from '@site/Layout.astro';
-import Card from '@site/Card.astro';
+import Layout from '@layouts/Layout.astro';
 ---
 
 <Layout title="JOUR.">
@@ -9,46 +8,12 @@ import Card from '@site/Card.astro';
 		To get started, open the directory <code>src/pages</code> in your project.<br />
 		<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
 	</p>
-	<div role="list" class="flex flex-row flex-wrap">
-		<Card
-			href="https://docs.astro.build/"
-			title="Documentation"
-			body="Learn how Astro works and explore the official API docs."
-		/>
-		<Card
-			href="https://astro.build/integrations/"
-			title="Integrations"
-			body="Supercharge your project with new frameworks and libraries."
-		/>
-		<Card
-			href="https://astro.build/themes/"
-			title="Themes"
-			body="Explore a galaxy of community-built starter themes."
-		/>
-		<Card
-			href="https://astro.build/chat/"
-			title="Community"
-			body="Come say hi to our amazing Discord community. ❤️"
-		/>
-		<Card
-			href="https://docs.astro.build/"
-			title="Documentation"
-			body="Learn how Astro works and explore the official API docs."
-		/>
-		<Card
-			href="https://astro.build/integrations/"
-			title="Integrations"
-			body="Supercharge your project with new frameworks and libraries."
-		/>
-		<Card
-			href="https://astro.build/themes/"
-			title="Themes"
-			body="Explore a galaxy of community-built starter themes."
-		/>
-		<Card
-			href="https://astro.build/chat/"
-			title="Community"
-			body="Come say hi to our amazing Discord community. ❤️"
-		/>
+	<div role="list" class="flex flex-col flex-wrap">
+        <a href="/jours">Jours</a>
+        <a href="/jours" data-astro-reload>Jours</a>
+	</div>
+	<div role="list" class="flex flex-col flex-wrap">
+        <a href="/test">Test</a>
+        <a href="/test" data-astro-reload>Test Reload</a>
 	</div>
 </Layout>
